<resources>
    <string name="app_name">BookNest</string>
    <string name="Skipbtn">SKIP</string>
    <string name="sherkbookname">Sherlock Holmes</string>
    <string name="btn">Next</string>
    <string name="dis1">Discover a world of books at your fingertips!</string>
    <string name="dis2">Get book suggestions tailored to your taste.</string>
    <string name="backbtn">Back</string>
    <string name="dis3_1">"Order books effortlessly      "</string>
    <string name="dis3_2">and</string>
    <string name="dis3_3">get them delivered to your door.</string>
    <string name="getstartbtn">Get Start</string>
    <string name="Booktitle_1">Sherlock Holmes</string>
    <string name="author_1">Arthur Conan Doyle</string>
    <string name="price_1">LKR 1250.00</string>
    <string name="Book_2">Madol Doova</string>
    <string name="author_2">Martin Wickramasinghe\n\n\n</string>
    <string name="price_2">LKR 850.00</string>
    <string name="Book_3">Amma</string>
    <string name="authur_3">Martin maxim gorki</string>
    <string name="price_3">LKR 950.00</string>
    <string name="t_1">Total</string>
    <string name="price_4">LKR 2750.00</string>
    <string name="price_5">-LKR 250.00</string>
    <string name="price_6">LKR 200.00</string>
    <string name="price_7">LKR 2550.00</string>
    <string name="p_1">Change Profile Picture</string>
    <string name="p_2">Wasana Nimali Manelka</string>
    <string name="p_3">wasana123@gmail.com</string>
    <string name="p_4">0713449292\n\n</string>
    <string name="p_5">No.12,New Kandy Road, Malabe</string>
    <string name="p_6">Enter new password</string>
    <string name="h_1">Sherlock Holmes</string>
    <string name="h_2">Amma</string>
    <string name="h_4">maxim gorki</string>
    <string name="B_1">Saved Books</string>
    <string name="b_2">See All</string>
    <string name="successfull_1">Order Confirmed!</string>
    <string name="successful_2">Your order has been successfully placed.</string>
    <string name="successful_3">Order ID: #2025-0123</string>
    <string name="success_total">" Total Price"</string>
    <string name="s_money">LKR 2250.00</string>
    <string name="s_back">Back To Home</string>
    <string name="s_help">Need help?</string>
    <string name="s_contact">Contact Support</string>
</resources>